--- a/src/pages/what-to-expect.astro
+++ b/src/pages/what-to-expect.astro
@@ -1,4 +1,5 @@
 ---
+import heroBackground from '@/assets/images/board-5154907_1920.jpg';
 import Hero from '@/components/Hero.astro';
 import Icon from '@/components/Icon.astro';
 import Layout from '@/components/Layout.astro';
@@ -13,7 +14,7 @@ import { SITE_CONFIG } from '@/config/site';
     title="What to Expect"
     description="Everything you need to know for your paddle boarding adventure"
     iconName="lifejacket"
-    backgroundImage="/board-5154907_1920.jpg"
+    backgroundImage={heroBackground}
   />
 
   <!-- Expect to Section -->
